#
# Makefile.am for update/src/inst
#

client_DATA =				\
	inst_rootpart.ycp		\
	inst_update.ycp			\
	inst_backup.ycp			\
	rootpart_proposal.ycp		\
	rootpart_check_keyboard.ycp	\
	update_proposal.ycp		\
	packages_proposal.ycp		\
	backup_proposal.ycp		\
	update.ycp			\
	inst_update_partition.ycp	\
	inst_update_partition_auto.ycp	\
	run_update.ycp

EXTRA_DIST = $(client_DATA)

include $(top_srcdir)/Makefile.am.common
