#
# Makefile.am for update/src/inst
#

SUBDIRS = scripts

module_DATA =				\
	Update.ycp

client_DATA =				\
	inst_rootpart.ycp		\
	inst_update.ycp			\
	inst_backup.ycp			\
	proposal_rootpart.ycp		\
	proposal_update.ycp		\
	proposal_packages.ycp		\
	proposal_backup.ycp

EXTRA_DIST = $(module_DATA) $(client_DATA)
